@@ -108,7 +108,23 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.1.2</version> <!-- Or a newer 3.x version if available, e.g., 3.2.5 -->
                 <configuration>
+                     <systemPropertyVariables>
+                        <java.awt.headless>true</java.awt.headless>
+                        <testfx.robot>glass</testfx.robot>
+                        <testfx.headless>true</testfx.headless>
+                        <prism.order>sw</prism.order>
+                        <prism.text>t2k</prism.text>
+                    </systemPropertyVariables>
                     <argLine>
+                        
+                        <!-- for headless environment -->
+                        --add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        -Djava.awt.headless=true
+                        -Dtestfx.robot=glass
+                        -Dtestfx.headless=true
+                        -Dprism.order=sw
+
                         --add-reads com.leave.engine=ALL-UNNAMED
                         --add-opens com.leave.engine/com.leave.engine=org.junit.platform.commons,javafx.fxml
                         --add-opens com.leave.engine/com.leave.engine.utils=org.junit.platform.commons,javafx.fxml
